--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,20 @@
 {
-    "name": "Calculator",
-    "short_name": "Calculator",
-    "icons": [
-      {
-        "src": "resources/icon.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ],
-    "start_url": ".",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#000000"
-  }
+  "name": "Calculator",
+  "short_name": "Calculator",
+  "icons": [
+    {
+      "src": "resources/192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "resources/icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000"
+}
