--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,17 @@
   "start_url": "/Calculator/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000"
+  "theme_color": "#000000",
+  "dir": "auto",
+  "orientation": "any",
+  "categories": [
+    "utilities"
+  ],
+  "shortcuts": [
+    {
+      "name": "Open New Tab",
+      "url": "/Calculator/",
+      "description": "Opens Another Tab"
+    }
+  ]
 }
