--- a/manifest.json
+++ b/manifest.json
@@ -5,37 +5,16 @@
     {
       "src": "resources/192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "resources/icon.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ],
-  "start_url": "/Calculator/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "dir": "auto",
-  "orientation": "any",
-  "categories": [
-    "utilities"
-  ],
-  "shortcuts": [
-    {
-      "name": "Open New Tab",
-      "url": "/Calculator/",
-      "description": "Opens Another Tab"
-    }
-  ],
-  "description": "A Small Simple Calculator",
-  "scope": "darklife12354.github.io/Calculator",
-  "lang": "en",
-  "display_override": [
-    "standalone"
-  ],
-  "prefer_related_applications": false
+  "theme_color": "#000000"
 }
