--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,13 @@
       "src": "resources/192.png",
       "sizes": "192x192",
       "type": "image/png"
+      "purpose": "any"
     },
     {
       "src": "resources/icon.png",
       "sizes": "512x512",
       "type": "image/png"
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
