--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,12 @@
       "src": "resources/192.png",
       "sizes": "192x192",
       "type": "image/png"
-      "purpose": "any"
+,      "purpose": "any"
     },
     {
       "src": "resources/icon.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
       "purpose": "maskable"
     }
   ],
